implemented auto insert sticky note into websites and created All notes section which can take user to that specific website

--- a/styles/content_script.css
+++ b/styles/content_script.css
@@ -22,6 +22,9 @@
 .add-btn {
     background: transparent;
 }
+.note-content{
+    overflow: hidden;
+}
 .textarea {
     color: white;
     outline: none;
