--- a/styles/index.css
+++ b/styles/index.css
@@ -7,8 +7,8 @@
     padding: 1rem;
     background-color: #202124;
     color : white ;
-    height: 90vh;
-    overflow: auto; 
+    /* height: 90vh;
+    overflow: auto;  */
   }
   .heading {
     background-color: #202124; /* Dark background for heading */
@@ -26,12 +26,17 @@
   }
 
   .list_notes{
-    height: 90vh;
-    overflow: auto;
+    /* height: 90vh;
+    overflow: auto; */
   }
 
   .curser-pointer{
     cursor: pointer !important;
   }
+
+  .resize {
+    resize: both;
+  }
+
 
 
