--- a/stickyNotes/stickyNotes.css
+++ b/stickyNotes/stickyNotes.css
@@ -80,4 +80,35 @@ body {
 
 
 }
+/* Pagination links */
+.pagination a {
+  color: rgb(255, 255, 255);
+  padding: 8px 16px;
+  text-decoration: none;
+  transition: background-color .3s;
+  margin: 0 2px;
+}
+
+/* Style the active/current link */
+.pagination a.active {
+  background-color: dodgerblue;
+  color: white;
+}
+
+.pagination {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  background-color: transparent;
+  overflow: hidden;
+  flex-wrap: wrap;
+}
+
+/* Add a grey background color on mouse-over */
+.pagination a:hover:not(.active) {
+  background-color: #ddd;
+  color: black;
+}
+
 
