--- a/styles/index.css
+++ b/styles/index.css
@@ -1,24 +1,23 @@
 .stickyNoteSideBar {
-    background-color: #202124; /* Light gray background for sidebar */
+    background-color: var(--background-color); /* Light gray background for sidebar */
     padding: 1rem;
-    color : white; 
+    color : var(--heading-color); 
   }
   .contentContainer {
     padding: 1rem;
-    background-color: #202124;
-    color: white;
+    background-color: var(--background-color);
+    color:var(--heading-color);
     height: 90vh;
     overflow: auto;
   }
   .heading {
-    background-color: #202124; /* Dark background for heading */
-    color: rgb(255, 255, 255);
+    background-color: var(--heading-color); /* Dark background for heading */
     padding: 1rem;
-    font-size: 1.5rem;
+
   }
 
   .bg-custom{
-    background-color: #202124;
+    background-color: var(--background-color);
   }
 
   .custom-margin-10{
