--- a/stickyNotes/stickyNotes.css
+++ b/stickyNotes/stickyNotes.css
@@ -23,6 +23,22 @@ body {
     margin-top: 10px;
     padding: 10px;
     width: 100%;
+    border-radius: 5px;
+  }
+
+  .icons{
+    display: flex;
+  }
+
+  .icon-btn{
+   margin: 0px ;
+   padding: 5px ;
+    /* padding: 10px; */
+    /* width: 100%; */
+    border-radius: 5px;
+    background: transparent;
+    border: none;
+    margin-left: 1rem !important ;
   }
 
   .title{
@@ -30,7 +46,7 @@ body {
   }
 
   #add-note{
-    background-color: var(--note-heading);
+    background-color: var(--heading-color);
   }
 
   /* popup.css */
@@ -48,9 +64,10 @@ body {
     justify-content: space-between;
     margin-bottom: 10px;
     align-items: center;
-    background: var(--note-heading);
+    background: var(--heading-color);
     color: var(--font-heading);
     padding: 10px;
+    border-radius: 5px;
 }
 
 .note-content-container {
@@ -69,7 +86,7 @@ body {
   margin-top: 5px ;
 }
 
-.note-heading{
+.heading-color{
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -84,12 +101,7 @@ body {
   outline: none ;
 
 }
-.delete-btn{
-  border: 1px solid black;
-  padding: 5px ; 
 
-
-}
 /* Pagination links */
 .pagination a {
   color: rgb(255, 255, 255);
@@ -121,9 +133,30 @@ body {
   color: black;
 }
 
-.curserP {
+.cursor-pointer {
   cursor: pointer !important
 }
 
 
+.selected {
+  background-color: var(--heading-color);
+  filter: brightness(0.91); 
+  margin-left: 2px ;
+}
+
+.button {
+  margin: 0px;
+  padding: 0px;
+  width: 10%;
+  height: fit-content;
+  background: transparent;
+  color: white;
+  border: none;
+}
+
+.noOfNotes{
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
 
