--- a/styles/colorPalette.css
+++ b/styles/colorPalette.css
@@ -11,5 +11,5 @@
 .select {
     background-color: var(--heading-color);
     filter: brightness(0.91); 
-    color: black;
+    color: black !important;
 }
