--- a/stickyNotes/stickyNotes.css
+++ b/stickyNotes/stickyNotes.css
@@ -52,7 +52,7 @@ body {
   /* popup.css */
 .note-card {
   border: 1px solid #ccc;
-  padding: 10px;
+  padding: 1px;
   margin-bottom: 10px;
   border-radius: 5px;
   background-color: var(--background-color);
@@ -62,18 +62,16 @@ body {
 .note-header {
   display: flex;
     justify-content: space-between;
-    margin-bottom: 10px;
     align-items: center;
     background: var(--heading-color);
     color: var(--font-heading);
-    padding: 10px;
-    border-radius: 5px;
+    padding: 5px;
 }
 
 .note-content-container {
-  overflow : hidden ; 
-   height: 1rem;
-   padding : 10px ; 
+  overflow: hidden;
+  height: 1.5rem;
+  padding: 5px ;
 }
 
 .note-content {
@@ -176,13 +174,13 @@ body {
   display: inline-block;
 }
 
-/* Dropdown content (hidden by default) */
+/* Dropdotwn content (hidden by default) */
 .dropdown-content {
   display: none;
   position: absolute;
   right: 2rem;
   top: 3.6rem;
-  background-color: var(--background-color);
+  background-color: var(--bg-lighter);
   color: var(--font-color) !important;
   min-width: 160px;
   box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
