--- a/styles/colorPalette.css
+++ b/styles/colorPalette.css
@@ -24,7 +24,7 @@
 .select {
     background-color: var(--page-heading);
     filter: brightness(0.9); 
-    color: white
+    color: white !important ; 
 }
 
 /* Custom styles for tooltips */
