--- a/stickyNotes/stickyNotes.css
+++ b/stickyNotes/stickyNotes.css
@@ -183,7 +183,7 @@ body {
   position: absolute;
   right: 2rem;
   top: 3.6rem;
-  background-color: var(--bg-lighter);
+  background-color: var(--popup-heading);
   color: var(--popup-heading-color) !important;
   min-width: 160px;
   box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
