add search and highlight functioanlity

--- a/styles/index.css
+++ b/styles/index.css
@@ -28,6 +28,12 @@
 
   }
 
+  mark {
+    background-color: yellow;
+    color: black;
+}
+
+
   .bg-custom{
     background-color: var(--page-bg);
   }
