--- a/styles/colorPalette.css
+++ b/styles/colorPalette.css
@@ -19,6 +19,15 @@
     --page-font: white ; 
 
 
+    --color-red: red;
+    --color-yellow: #9d9d10;
+    --color-green: green;
+    --color-grey: grey;
+    --color-purple: purple;
+    --color-pink: #d57485;
+    --color-default: var(--popup-heading);
+
+
 }
 
 .select {
