fix minor issue and highlight functionality hostName in sticky note tab

--- a/styles/colorPalette.css
+++ b/styles/colorPalette.css
@@ -22,7 +22,7 @@
     --color-red: red;
     --color-yellow: #9d9d10;
     --color-green: green;
-    --color-grey: grey;
+    --color-grey: #4c4c4c;
     --color-purple: purple;
     --color-pink: #d57485;
     --color-default: var(--popup-heading);
