--- a/stickyNotes/stickyNotes.css
+++ b/stickyNotes/stickyNotes.css
@@ -147,6 +147,10 @@ body {
 
 
 .selected {
+  margin-left: 2px ;
+}
+
+.disable {
   background-color: var(--heading-color);
   filter: brightness(0.5); 
   margin-left: 2px ;
